gallery info spacing corrected

--- a/style.css
+++ b/style.css
@@ -1155,11 +1155,21 @@ a.icons:hover {
 
 
 .gallery-headline h1 {
+    letter-spacing: .5rem;
     text-align: center;
     font-size: 2rem;
     color: var(--mainBlue);
     font-family: 'Fjalla One', sans-serif;
 }
+
+.gallery-before p {
+    width: 500px;
+}
+
+.gallery-after p {
+    width: 500px;
+}
+
 
 .google-icon {
     width: 60px;
@@ -1641,6 +1651,14 @@ a.icons:hover {
         height: 200px;
         border: none !important;
         box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
+    }
+
+    .gallery-before p {
+        width: 300px;
+    }
+
+    .gallery-after p {
+        width: 300px;
     }
 
     .gallery {
